# server/docs/swagger.yaml
@@ -16,6 +16,15 @@ definitions:
         type: string
       uuid:
         type: string
+      video_history:
+        items:
+          $ref: '#/definitions/models.UserVideoHistory'
+        type: array
+      video_preferences:
+        description: Stats
+        items:
+          $ref: '#/definitions/models.UserVideoPreference'
+        type: array
     type: object
   models.UserVideoHistory:
     properties:
@@ -42,6 +51,21 @@ definitions:
         type: string
       videoId:
         type: string
+    type: object
+  models.Video:
+    properties:
+      description:
+        type: string
+      dislikes:
+        type: integer
+      likes:
+        type: integer
+      title:
+        type: string
+      video_id:
+        type: string
+      views:
+        type: integer
     type: object
 host: 127.0.0.1:8080
 info:
@@ -539,4 +563,52 @@ paths:
       summary: Get User Video Preference
       tags:
       - Preferences
+  /recsys/user:
+    post:
+      consumes:
+      - application/json
+      description: It does EXACTLY what it says.
+      produces:
+      - application/json
+      responses: {}
+      summary: retrieves a user with history by their ID
+      tags:
+      - Video History
+  /recsys/videos:
+    post:
+      consumes:
+      - application/json
+      description: This API sends a user object to ML backend providing recommendations
+        based on the user's history
+      parameters:
+      - description: User's ID
+        in: body
+        name: user_id
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of recommended videos
+          schema:
+            items:
+              $ref: '#/definitions/models.Video'
+            type: array
+        "400":
+          description: Invalid request payload
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get recommended videos for a user
+      tags:
+      - recommendations
 swagger: "2.0"
