# server/models/user.go
@@ -8,12 +8,12 @@ type User struct {
 	Name    string `json:"name" gorm:"default:null"`
 	Surname string `json:"surname" gorm:"default:null"`
 	Region  string `json:"region" gorm:"default:null"`
-	City    string `json:"city" gorm:"default:null"
-`
+	City    string `json:"city" gorm:"default:null"`
+
 	Password string `json:"-" gorm:"not null;default:null"`
 	Salt     []byte `json:"-" gorm:"not null;default:null"`
 
 	// Stats
-	VideoPreferences []UserVideoPreference `json:"-" gorm:"foreignKey:UserId"`
-	VideoHistory     []UserVideoHistory    `json:"-" gorm:"foreignKey:UserId"`
+	VideoPreferences []UserVideoPreference `json:"video_preferences,omitempty" gorm:"foreignKey:UserId"`
+	VideoHistory     []UserVideoHistory    `json:"video_history,omitempty" gorm:"foreignKey:UserId"`
 }
